scr/nginx_HTTPS/service_https.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-https
  namespace: dz2-3
spec:
  type: NodePort
  ports:
    - name: http-nginx
      port:  80
      nodePort: 32000
      protocol: TCP
      targetPort: 80
  selector:
    app: main
